[workspace]
resolver = "2"
members = ["api", "program", "utils"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://minechain.gg"
documentation = "https://minechain.gg"
repository = "https://github.com/regolith-labs/ore"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[workspace.dependencies]
array-const-fn-init = "0.1.1"
bytemuck = "1.14.3"
borsh = "1.5.1"
const-crypto = "0.1.0"
drillx = { version = "2.1.0", features = ["solana"] }
mpl-core = "0.8.0"
mpl-token-metadata = "4.1.2"
num_enum = "0.7.2"
forge-api = { path = "api", version = "2.1.0" }
forge-utils = { path = "utils", features = ["spl"], version = "2.1.0" }
solana-program = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [ "no-entrypoint" ] } 
static_assertions = "1.1.0"
thiserror = "1.0.57"

# [patch.crates-io]
# drillx = { path = "../drillx/drillx" }

